ix layout issues

--- a/0x06-responsive_design/02-1-styles.css
+++ b/0x06-responsive_design/02-1-styles.css
@@ -177,6 +177,10 @@
     white-space: nowrap;
   }
   
+  main img{
+    width: 100%;
+    height: auto;
+  }
   /*** 2. LAYOUT ***/
   
   /* Layout
@@ -211,6 +215,24 @@
   
   .col-1-2 {
     width: calc((100% / 2) - 2rem);
+  }
+
+  @media all and (min-width: 767px) {
+    :root {
+      --section-padding: 5rem 1.5rem;
+      --section-body-padding: 2rem 0 0;
+    }
+
+    ul.row, .row{
+      flex-direction: column;
+      margin: 0;
+    }
+    [class^="col-"] {
+      margin: 0 0 3rem 0;
+    }
+    .col-1-3, .col-1-2 {
+      width: 100%;
+    }
   }
   
   /* Navbar
@@ -261,7 +283,11 @@
     background-color: var(--color-primary);
     width: 100%;
   }
-  
+  @media all and (max-width: 767px) {
+    .navbar-menu {
+      display: none;
+    }
+  }
   /* Header
       ============================= */
   
@@ -398,6 +424,12 @@
   
   .section-latest-news .row {
     flex-direction: row-reverse;
+  }
+
+  @media all and (max-width: 767px) {
+    .section-latest-news .row {
+      flex-direction: column;
+    }
   }
   
   /* Section SERVICES
